2011-03-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.rc, src/win/wgnuplot.rc, src/win/wresourc.h:
	Use standard dialog font. Remove obsolete DS_3DLOOK.

	* src/win/winmain.c (WinMain): Sync About Dialog box with
	output of "show version".

	* src/win/wmenu.c (SendMacro), src/win/wgnuplot.mnu: Add
	About dialog to Help menu.

	* src/win/wmenu.c (SendMacro), src/win/wgnuplot.mnu: Add
	Options menu to toolbar.

2011-03-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data):  Fix array bounds underflow if every
	point in a data file is invalid.
	Bug #3254653

2011-03-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c: Always update complete lines of text instead
	of drawing single characters, since character boxes might
	overlap when using ClearType.

	* docs/README: Document recent changes to Windows help.

	* src/win/wgnuplib.h, src/win/wcommonh.h, src/win/wtext.c:
	Continue to make more stuff module-local.
	
	* src/win/wgnuplib.h, src/win/wmenu.c: Move definition of
	SHELL_DIR_DIALOG.

	* config/config.nt: Sync with config.h created by autoconf.

2011-03-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm (PNG_put_text ENHGD_FLUSH gd_iconv):  Invoke the
	SJIS/UTF8 conversion for both enhanced and non-enhanced text.
	EAM - and collapse the shared code into a subroutine.

2011-03-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Add missing paths to wxt/cairo/pango
	files. Update build instructions.  WX_LOCATION is no longer
	required since gnuplot has its own manifest file now and the one
	supplied by wxWidgets is no longer included. htmlhelp.lib is
	included in LDLIBS not TERMFLAGS. Replace '=' by ':=' for shell
	commands. Filter out drive specifications "c:" in results from
	pkg-config which would confuse make.

2011-03-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c docs/gnuplot.doc:  Allow pm3d plots to use the fourth