@@ -1,3 +1,9 @@
+2011-03-30  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* config/mingw/Makefile: Optionally, use pre-built DLL version
+	of libgd. Use environment variable PROGRAMFILES to access help
+	compilers.
+
 2011-03-29  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/win/wgnuplib.rc, src/win/wgnuplot.rc, src/win/wresourc.h:
